--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <div id="gameover_menu" class="game-over__menu context__menu my-d-none">
                             <h2 class="context-menu__item context__menu-title game-over__menu-title">TETRIS</h2>
                             <h3 class="context-menu__item game-over__menu-game-over-text">Game Over</h3>
-                            <div id="new_record" class="new-record my-invisible">
+                            <div id="new_record" class="new-record my-d-none">
                                 <h2 class="new-record__title">NEW RECORD</h2>
                                 <span class="new-record__score-text"></span>
                                 <input id="new_record_name" class="new-record__input" type="text" placeholder="Enter your name">
